objects/ssot__ActionPlanTemplateVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionPlanTemplateId__c</fullName>
        <label>Action Plan Template</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivationDateTime__c</fullName>
        <label>Activation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Action Plan Template Version Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InactivationDateTime__c</fullName>
        <label>Inactivation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818167473_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplateVersion_ActionPlan_rel</label>
        <referenceTo>ssot__ActionPlanTemplate__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplateVersion_ActionPlan_rel</relationshipLabel>
        <relationshipName>rel_1719818167473_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>